--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "emoji-picker-react": "^4.11.1",
     "lucide-react": "^0.427.0",
     "moment": "^2.30.1",
@@ -29,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.0",
+    "shadcn-ui": "^0.9.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.0",
