--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
